Update files deploy

--- a/Backend/Dockerfile
+++ b/Backend/Dockerfile
@@ -2,17 +2,21 @@
 #VOLUME /tmp
 #COPY target/taskmanager-0.0.1-SNAPSHOT.jar app.jar
 #ENTRYPOINT ["java","-jar","/app.jar"]
-# Usamos una imagen base con Java 17, compatible con Spring Boot 3.x
-FROM eclipse-temurin:17-jdk-alpine
 
-# Creamos un directorio de trabajo dentro del contenedor
+# Etapa 1: Construcción del JAR
+FROM maven:3.9.6-eclipse-temurin-17-alpine AS build
+WORKDIR /app
+COPY . .
+RUN mvn clean package -DskipTests
+
+# Etapa 2: Imagen final más liviana
+FROM eclipse-temurin:17-jdk-alpine
 WORKDIR /app
 
-# Copiamos el .jar generado desde Maven (ajusta el nombre si lo necesitas)
-COPY target/taskmanager-0.0.1-SNAPSHOT.jar app.jar
+# Copiamos solo el JAR ya compilado
+COPY --from=build /app/target/taskmanager-0.0.1-SNAPSHOT.jar app.jar
 
-# Exponemos el puerto que Render usará (Render escucha en 8080 por defecto)
 EXPOSE 8080
 
-# Comando de ejecución de Spring Boot
 ENTRYPOINT ["java", "-jar", "app.jar"]
+
